temp/unpackaged/objects/Job_Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Working_Company__c</fullName>
        <label>Working Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_in_IT__c</fullName>
        <label>Years in IT</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Candidates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>